[package]
name = "actix-form-parser-debugging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
rand = "0.8"
tokio = { version = "1.28.2", features = ["full"] }
actix-multipart = "0.6.0"
futures = "0.3.25"
anyhow = "1.0.71"
mime = "0.3.16"
